# cubesat-c2

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.json
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/migrations/: 001_initial_schema.sql  002_must_change_password.sql  003_fdir_alerts.sql  004_satnogs_observations.sql
backend/src/: config.py
backend/src/anomaly/: detector.py
backend/src/api/: audit.py  auth.py  bootstrap.py  deps.py  main.py  metrics.py  rbac.py  (+3 more)
backend/tests/: conftest.py  test_config.py  test_health.py  test_invariants.py  test_rbac.py
deployment/k8s/: backend.yaml  configmap.yaml  frontend.yaml  namespace.yaml  nats.yaml  redis.yaml  secrets.yaml  simulator.yaml  timescaledb.yaml
deployment/loki/: loki-config.yml  promtail-config.yml
deployment/prometheus/: prometheus.yml
docs/: GETTING_STARTED.md  KOD_REVIEW_NOTLARI.md  MIMARI.md  P0_GUVENLIK_DUZELTMELERI.md  YOL_HARITASI.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/deployment/: nginx.conf
frontend/e2e/: auth.spec.ts  dashboard.spec.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
simulator/: Dockerfile  pyproject.toml
simulator/src/: ax25_framer.py  config.py  main.py  publisher.py  satellite.py
simulator/tests/: test_ax25_framer.py  test_bug05_safe_recovery_edge.py  test_satellite.py
(+101 files in other folders)
