[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cubesat-simulator"
version = "0.1.0"
description = "CubeSat telemetry simulator — produces AX.25 frames on NATS"
requires-python = ">=3.11"

dependencies = [
    "nats-py>=2.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "BLE"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
